--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ dependencies {
   compile files('libs/codepath-oauth-0.3.0.jar')
   compile files('libs/codepath-utils.jar')
   compile files('libs/scribe-codepath.jar')
-  compile files('libs/ActiveAndroid-3.1-adcddac4c58.jar')
+  compile files('libs/ActiveAndroid.jar')
   compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
   compile 'com.android.support:support-v4:20.0.0'
   compile 'com.android.support:appcompat-v7:20.0.0'
