--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <provider android:authorities="com.codepath.apps.restclienttemplate" android:exported="false"
+                android:name="com.activeandroid.content.ContentProvider" />
+
         <meta-data
             android:name="AA_DB_NAME"
             android:value="RestClient.db" />
