--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,5 @@ dependencies {
   compile files('libs/ActiveAndroid-3.1-adcddac4c58.jar')
   compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
   compile 'com.android.support:support-v4:20.0.0'
-  compile 'com.android.support:appcompat-v7:20.0.0'
+  compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
 }
