--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
   compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
   compile 'com.android.support:support-v4:20.0.0'
   compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
+  compile 'com.google.code.gson:gson:2.3'
 }
